<resources>
    <string name="app_name">Тесты по теме "Первая помощь"</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_test_passing">Прохождение теста</string>
    <string name="title_activity_results">Результаты теста</string>
    <string name="questionAsked">вопросов задано</string>
    <string name="testQuestion">Вопрос теста</string>
    <string name="checkResult">Узнать результат</string>
    <string name="prevButton">Предыдущий</string>
    <string name="answerButton">Ответить</string>
    <string name="nextButton">Следующий</string>
    <string name="rightAnswersText">Из них правильных ответов получено</string>

    <string name="title_activity_mode_navigation">Тесты</string>
    <string name="mode">Режим</string>
    <string name="mode_study">Обучение</string>
    <string name="mode_normal">Стандарт</string>
    <string name="mode_expert">Эксперт</string>
    <string name="first_aid">Первая помощь</string>
    <string name="general_name">Тестирование</string>

    <string name="facebook_app_id">898285920274265</string>

    <string name="banner_ad_intersitional">ca-app-pub-3873894144201597/2935761136</string>
    <string name="banner_ad_unit_id">ca-app-pub-3873894144201597/3485661130</string>
    <string name="banner_ad_program_id">ca-app-pub-3873894144201597~1459027930</string>
<!--
    <string name="banner_ad_intersitional">ca-app-pub-1237259514169936/1079156002</string>
    <string name="banner_ad_unit_id">ca-app-pub-1237259514169936/8602422807</string>
    <string name="banner_ad_program_id">ca-app-pub-1237259514169936~7125689603</string>
    -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="statistics">Статистика</string>
    <string name="unanswerdQuestion">Неотвеченные вопросы</string>
    <string name="endTest">Закончить тест</string>
</resources>
